--- a/myportfolio.html
+++ b/myportfolio.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="上野和馬の自己紹介">
     <title>ポートフォリオ|上野和馬(Kazuma Ueno)</title>
+    <link rel="stylesheet" href="myportfolio.css">
 </head>
 <body>
-    
+    <!-- headerの設定 -->
+    <!-- ロゴ2つ -->
+    <header>
+        <div class="profile_img">
+            <img src="img/プロフィール画像_白黒.png" alt="プロフィール写真">
+                    
+            <div class="profile_text">
+                    <h1 class="name_en">
+                        Kazuma<br>Ueno
+                    </h1>
+                    <div class="profile_small_letter">    
+                        <b class="name_jp">上野 和馬</b><br>
+                        <b class="job_name"> Web Designer / Data Scientist</b>   
+                    </div>             
+                </div>
+        </div>
+        <ul class="header_icon">
+            <li>
+                <a href="">
+                    <img src="img/about.png" alt="プロフィール">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <img src="img/project.png" alt="ワーク">                            </a> 
+            </li>
+        </ul>  
+    </header>
+    <div class="box-about">
+        <div class="about-text">
+            <h6>About</h6>
+            <p class="about_code">HTML / CSS / JavaScript / PHP / MySQL / PosgreSQL / Python / 
+                <br>Photoshop / Lightroom / Xd / Premire Pro</p>
+            <p>大手証券会社でリテール営業、ベンチャー企業でコンサルタント、Webマーケティング経験を経る一方でフォトグラファーとして記念撮影や商品撮影の撮影も受ける。
+                <br>現在はフリーランスとして、Google App ScriptとスプレッドシートやPythonを用いた株式分析ツールの開発や、経理周りの効率化ツール作成を受けつつ、エモい風景写真を撮り続けております。</p>
+            <a class="mail_address" href=""><p>kazuma.ueno@felietephoto.com</p></a>
+            <ul class="SNS_icon_list">
+                <li>
+                    <a href="">
+                        <img src="img/github_icon.png" alt="GitHubアイコン">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="img/twitter_icon.png" alt="Twitterアイコン">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="img/instagram_icon.png" alt="Instagramアイコン">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
